Update the JS part

--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -95,7 +95,9 @@ TODO
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-TODO;
+interface Foo {
+  name: string;
+}
 ```
 
 </TabItem>
