Revert js changes

--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -95,9 +95,7 @@ TODO
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-interface Foo {
-  name: string;
-}
+// TODO
 ```
 
 </TabItem>
