--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -95,7 +95,8 @@ TODO
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-// TODO
+// Please note that this feature is not supported right now, and the model will be generated un-flattened. 
+// Please comment and follow work status on: https://github.com/Azure/autorest.typescript/issues/2164
 ```
 
 </TabItem>
