Add C# open issue

--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -88,14 +88,15 @@ print(f.name)  # Flattened access is dynamically supported, but not documented
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-TODO
+// Please note that this feature is not supported right now, and the model will be generated un-flattened.
+// Please comment and follow work status on: https://github.com/Azure/autorest.csharp/issues/4040
 ```
 
 </TabItem>
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-// Please note that this feature is not supported right now, and the model will be generated un-flattened. 
+// Please note that this feature is not supported right now, and the model will be generated un-flattened.
 // Please comment and follow work status on: https://github.com/Azure/autorest.typescript/issues/2164
 ```
 
