--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -136,6 +136,8 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmResourceUpdatedResponse`](./data-types.md#Azure.ResourceManager.ArmResourceUpdatedResponse)
 - [`ArmResponse`](./data-types.md#Azure.ResourceManager.ArmResponse)
 - [`CustomerManagedKeyEncryption`](./data-types.md#Azure.ResourceManager.CustomerManagedKeyEncryption)
+- [`CustomNameParameter`](./data-types.md#Azure.ResourceManager.CustomNameParameter)
+- [`DefaultNameParameter`](./data-types.md#Azure.ResourceManager.DefaultNameParameter)
 - [`DefaultProvisioningStateProperty`](./data-types.md#Azure.ResourceManager.DefaultProvisioningStateProperty)
 - [`Encryption`](./data-types.md#Azure.ResourceManager.Encryption)
 - [`EncryptionConfiguration`](./data-types.md#Azure.ResourceManager.EncryptionConfiguration)
