--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -136,8 +136,6 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmResourceUpdatedResponse`](./data-types.md#Azure.ResourceManager.ArmResourceUpdatedResponse)
 - [`ArmResponse`](./data-types.md#Azure.ResourceManager.ArmResponse)
 - [`CustomerManagedKeyEncryption`](./data-types.md#Azure.ResourceManager.CustomerManagedKeyEncryption)
-- [`CustomNameParameter`](./data-types.md#Azure.ResourceManager.CustomNameParameter)
-- [`DefaultNameParameter`](./data-types.md#Azure.ResourceManager.DefaultNameParameter)
 - [`DefaultProvisioningStateProperty`](./data-types.md#Azure.ResourceManager.DefaultProvisioningStateProperty)
 - [`Encryption`](./data-types.md#Azure.ResourceManager.Encryption)
 - [`EncryptionConfiguration`](./data-types.md#Azure.ResourceManager.EncryptionConfiguration)
@@ -168,6 +166,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ResourceInstanceParameters`](./data-types.md#Azure.ResourceManager.ResourceInstanceParameters)
 - [`ResourceKind`](./data-types.md#Azure.ResourceManager.ResourceKind)
 - [`ResourceListResult`](./data-types.md#Azure.ResourceManager.ResourceListResult)
+- [`ResourceNameParameter`](./data-types.md#Azure.ResourceManager.ResourceNameParameter)
 - [`ResourceParentParameters`](./data-types.md#Azure.ResourceManager.ResourceParentParameters)
 - [`ResourcePlan`](./data-types.md#Azure.ResourceManager.ResourcePlan)
 - [`ResourceSku`](./data-types.md#Azure.ResourceManager.ResourceSku)
