add-additional-properties-doc-for-ts

--- a/docs/howtos/DataPlane Generation - DPG/06types.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/06types.mdx
@@ -105,7 +105,26 @@ TODO
 </TabItem>
 <TabItem value="typescript" label="Typescript" >
 
-TODO
+```ts
+// RLC input
+export interface Animal extends Record<string, unknown> {
+  name: string;
+  kind: string;
+}
+
+// RLC output
+export interface AnimalOutput extends Record<string, any> {
+  name: string;
+  kind: string;
+}
+
+
+// Modular for both legacy and non legacy 
+export interface Animal extends Record<string, any> {
+  name: string;
+  kind: string;
+}
+```
 
 </TabItem>
 <TabItem value="java" label="Java" >
@@ -240,8 +259,48 @@ TODO
 </TabItem>
 <TabItem value="typescript" label="Typescript" >
 
-TODO
+```ts
+// RLC input
+export interface AnimalProperty {
+  category: string;
+  value: unknown;
+}
+export interface Animal extends Record<string, unknown>{
+  name: string;
+  kind: string;
+}
 
+// RLC output
+export interface AnimalProperty {
+  category: string;
+  value: any;
+}
+export interface Animal extends Record<string, any>{
+  name: string;
+  kind: string;
+}
+
+// Modular for legacy clients
+export interface AnimalProperty {
+  category: string;
+  value: any;
+}
+export interface Animal extends Record<string, any>{
+  name: string;
+  kind: string;
+}
+
+// Modular for non-legacy clients
+export interface AnimalProperty {
+  category: string;
+  value: any;
+}
+export interface Animal {
+  name: string;
+  kind: string;
+  additionalProperties: Record<string, AnimalProperty>;
+}
+```
 </TabItem>
 <TabItem value="java" label="Java" >
 
@@ -357,7 +416,19 @@ TODO
 </TabItem>
 <TabItem value="typescript" label="Typescript" >
 
-TODO
+```ts
+// RLC input and output
+export interface Animal extends Record<string, string | number>{
+  name: string;
+  kind: string;
+}
+
+// Modular for legacy and non-legacy clients
+export interface Animal extends Record<string, string | number>{
+  name: string;
+  kind: string;
+}
+```
 
 </TabItem>
 <TabItem value="java" label="Java" >
@@ -453,9 +524,19 @@ TODO
 
 </TabItem>
 <TabItem value="typescript" label="Typescript" >
+```ts
+// RLC input and output
+export interface Animal extends Record<string, string | null>{
+  name: string;
+  kind: string;
+}
 
-TODO
-
+// Modular for legacy and non-legacy clients
+export interface Animal extends Record<string, string | null>{
+  name: string;
+  kind: string;
+}
+```
 </TabItem>
 <TabItem value="java" label="Java" >
 
