--- a/docs/howtos/DataPlane Generation - DPG/09versioning.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/09versioning.mdx
@@ -116,6 +116,9 @@ You can also override the signature to return the combined api surface area of a
 
 **To override the behavior, pass in `api-version: all` in your `tspconfig.yaml`.**
 
+<Tabs>
+<TabItem value="typespec" label="TypeSpec" default>
+
 ```typespec
 import "@typespec/versioning";
 
