--- a/docs/release-notes/release-2024-03-05.md
+++ b/docs/release-notes/release-2024-03-05.md
@@ -6,7 +6,7 @@ title: March 2024
 
 See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2024-03-05)
 
-:::warn
+:::warning
 This release contains breaking changes in typespec core.
 :::
 
